# monolog

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  build.bat  build.sh
docs/: Makefile  README-cs.md  README.md  monolog.md
examples/: caesar.txt  cinema_city.txt  exponentator.txt  factorial.txt  fibonacci.txt  fibonacci_iter.txt  fizzbuzz.txt  interval.txt  minmax.txt  patterns.txt  player_map.txt  player_map_2d.txt  racing.txt  reverse_order.txt  word_count.txt
include/monolog/: ast.h  builtin_funcs.h  cli.h  diagnostic.h  environment.h  expr_result.h  function.h  hashmap.h  interp.h  lexer.h  parser.h  scope.h  semantic_checker.h  semck.h  src_info.h  stmt_result.h  strbuf.h  type.h  utils.h  value.h  variable.h  vector.h
src/: CMakeLists.txt  ast.c  builtin_funcs.c  diagnostic.c  environment.c  function.c  hashmap.c  interp.c  lexer.c  main.c  parser.c  scope.c  semantic_checker.c  semck.c  strbuf.c  type.c  utils.c  vector.c
tests/: CMakeLists.txt  hashmap.c  lexer.c  vector.c
tests/golden-files/: assignment-2.txt  binary-int-div-int.txt  binary-int-mul-int.txt  block-multiple-statements.txt  else-if-multiline-2.txt  else-if-oneline.txt  empty-block.txt  empty-for.txt  empty-if.txt  fn-decl-empty-body.txt  fn-decl-empty-with-1-param.txt  fn-decl-empty-with-params.txt  fn-decl-empty-without-params.txt  fn-decl-with-1-statement.txt  fn-decl-with-bad-name-block.txt  fn-decl-with-missing-rparen.txt  fn-decl-with-more-statements.txt  for-nested-multiline-2.txt  for-statement-1.txt  for-statement-2.txt  for-without-cond.txt  grouping.txt  if-else-nested-oneline.txt  if-nested-oneline.txt  if-statement-1.txt  incomplete-expr-1.txt  incomplete-expr-3.txt  int-1234567893.txt  int-int64-max.txt  invalid-expr-1.txt  invalid-expr-4.txt  multiline-string.txt  multiple-exprs-2.txt  nested-grouping.txt  semicolon-misuse-4.txt  unary-minus-int.txt  unary-minus-separated-int.txt  var-with-bad-assign.txt  var-with-expression.txt  var-with-value.txt  (+5 more)
tests/golden-files/expressions/: and-or-precedence.txt  array-subscript.txt  assignment-1.txt  binary-int-minus-int.txt  binary-int-mod-int.txt  binary-int-plus-int.txt  combination.txt  equality.txt  fn-call-with-1-arg.txt  fn-call-with-multiple-args.txt  fn-call-with-trailing-comma.txt  fn-call-without-args.txt  identifier.txt  inequality.txt  int-0.txt  int-42.txt  left-associativity.txt  list-subscript.txt  other-prefix-operators.txt  precedence.txt  prefix-decrement.txt  prefix-increment.txt  string.txt  suffix-decrement.txt  suffix-increment.txt  unary-nested-int.txt  unary-plus-int.txt
tests/golden-files/invalid/: array-subscript-bad-expression-1.txt  array-subscript-bad-expression-2.txt  fn-call-missing-rparen.txt  fn-decl-with-bad-body.txt  fn-decl-with-bad-name.txt  fn-decl-with-bad-param-name.txt  fn-decl-with-missing-comma.txt  fn-decl-with-missing-rparen.txt  fn-in-for-init-clause.txt  if-missing-cond.txt  incomplete-expr-2.txt  incomplete-expr-4.txt  list-subscript-bad-expression-1.txt  list-subscript-bad-expression-2.txt  var-with-bad-assign.txt  var-with-bad-name.txt  var-with-bad-value.txt  while-missing-cond.txt
tests/golden-files/statements/: array-with-known-size.txt  array-with-unknown-size.txt  block-1-statement.txt  block-multiple-statements.txt  dangling-else.txt  empty-list.txt  empty-while.txt  exit-keyword.txt  fn-decl-empty-body.txt  fn-decl-empty-with-1-param.txt  fn-decl-empty-with-params.txt  fn-decl-empty-without-params.txt  fn-decl-with-1-statement.txt  fn-decl-with-missing-rparen.txt  fn-decl-with-more-statements.txt  for-nested-oneline.txt  for-statement-1.txt  for-statement-2.txt  for-without-init-and-iter.txt  for-without-init.txt  for-without-iter.txt  if-else-nested-multiline.txt  if-nested-multiline.txt  if-statement-1.txt  if-statement-2.txt  infinite-for.txt  list-with-initial-size.txt  multiple-exprs-1.txt  nested-arrays.txt  nested-lists.txt  nested-option-type.txt  option-type.txt  print-keyword.txt  println-keyword.txt  return-keyword.txt  semicolon-misuse-5.txt  semicolon-misuse-6.txt  var-with-expression.txt  var-with-value.txt  var-without-value.txt  (+2 more)
tests/interp/: expressions.c  invalid.c  main.c  shared.h  statements.c  valid.c
tests/parser/: expressions.c  invalid.c  main.c  shared.h  statements.c
tests/semck/: invalid.c  main.c  shared.h  valid.c
